sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:8: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      while ((j-ecart=>0)&&(tmp<getValeur(j-ecart))){
               ^